tests/indeterminate_module_type/es_star_after_cjs.js
module.exports = 0;
export * from "./dependency"; // error
0 as string; // error
